--- a/views/home.hbs
+++ b/views/home.hbs
@@ -7,9 +7,10 @@
     <title>Help Page</title>
 </head>
 <body>
-    <H1>{{title}}</H1>
-    <p>{{message}}</p>
+       {{>header}} 
     
-    {{>footer}}
+     <p>{{large message}}</p> 
+    
+      {{>footer}}
 </body>
 </html>
