--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -1,5 +1,6 @@
 <header>
     <H1>{{title}}</H1>
         <p><a href="/">Home</a></p> 
-        <p><a href="/about">About</a></p> 
+        <p><a href="/about">About</a></p>
+        <p><a href="/projects">Projects</a></p>  
     </header>
